# sigfox-ep-addon-ta

./: CHANGELOG.md  CMakeLists.txt  README.md
cmake/: precompile_addon_ta.cmake
inc/: sigfox_ep_addon_ta_api.h  sigfox_ep_addon_ta_version.h
inc/test_modes_ta/: sigfox_ep_addon_ta_csdl.h  sigfox_ep_addon_ta_csul.h  sigfox_ep_addon_ta_cw.h
src/: sigfox_ep_addon_ta_api.c
src/test_modes_ta/: sigfox_ep_addon_ta_csdl.c  sigfox_ep_addon_ta_csul.c  sigfox_ep_addon_ta_cw.c
